crates/aiken-lang/src/parser/definition/snapshots/def_test.snap
---
source: crates/aiken-lang/src/parser/definition/test.rs
description: "Code:\n\ntest foo() {\n    True\n}\n"
---
Test(
    Function {
        arguments: [],
        body: Var {
            location: 17..21,
            name: "True",
        },
        doc: None,
        location: 0..10,
        name: "foo",
        public: false,
        return_annotation: Some(
            Constructor {
                location: 0..23,
                module: None,
                name: "Bool",
                arguments: [],
            },
        ),
        return_type: (),
        end_position: 22,
        can_error: false,
    },
)
