crates/aiken-lang/src/parser/definition/snapshots/def_test_fail.snap
---
source: crates/aiken-lang/src/parser/definition/test.rs
description: "Code:\n\ntest invalid_inputs() fail {\n  expect True = False\n\n  False\n}\n"
---
Test(
    Function {
        arguments: [],
        body: Sequence {
            location: 31..59,
            expressions: [
                Assignment {
                    location: 31..50,
                    value: Var {
                        location: 45..50,
                        name: "False",
                    },
                    patterns: [
                        AssignmentPattern {
                            pattern: Constructor {
                                is_record: false,
                                location: 38..42,
                                name: "True",
                                arguments: [],
                                module: None,
                                constructor: (),
                                spread_location: None,
                                tipo: (),
                            },
                            annotation: None,
                            location: 38..42,
                        },
                    ],
                    kind: Expect {
                        backpassing: false,
                    },
                    comment: None,
                },
                Var {
                    location: 54..59,
                    name: "False",
                },
            ],
        },
        doc: None,
        location: 0..26,
        name: "invalid_inputs",
        public: false,
        return_annotation: None,
        return_type: (),
        end_position: 60,
        on_test_failure: SucceedEventually,
    },
)
