crates/aiken-lang/src/parser/definition/snapshots/double_validator.snap
---
source: crates/aiken-lang/src/parser/definition/validator.rs
description: "Code:\n\nvalidator {\n  fn foo(datum, rdmr, ctx) {\n    True\n  }\n\n  fn bar(rdmr, ctx) {\n    True\n  }\n}\n"
---
Validator(
    Validator {
        doc: None,
        end_position: 90,
        fun: Function {
            arguments: [
                Arg {
                    arg_name: Named {
                        name: "datum",
                        label: "datum",
                        location: 21..26,
                        is_validator_param: false,
                    },
                    location: 21..26,
                    annotation: None,
                    doc: None,
                    tipo: (),
                },
                Arg {
                    arg_name: Named {
                        name: "rdmr",
                        label: "rdmr",
                        location: 28..32,
                        is_validator_param: false,
                    },
                    location: 28..32,
                    annotation: None,
                    doc: None,
                    tipo: (),
                },
                Arg {
                    arg_name: Named {
                        name: "ctx",
                        label: "ctx",
                        location: 34..37,
                        is_validator_param: false,
                    },
                    location: 34..37,
                    annotation: None,
                    doc: None,
                    tipo: (),
                },
            ],
            body: Var {
                location: 45..49,
                name: "True",
            },
            doc: None,
            location: 14..38,
            name: "foo",
            public: false,
            return_annotation: None,
            return_type: (),
            end_position: 52,
            can_error: true,
        },
        other_fun: Some(
            Function {
                arguments: [
                    Arg {
                        arg_name: Named {
                            name: "rdmr",
                            label: "rdmr",
                            location: 64..68,
                            is_validator_param: false,
                        },
                        location: 64..68,
                        annotation: None,
                        doc: None,
                        tipo: (),
                    },
                    Arg {
                        arg_name: Named {
                            name: "ctx",
                            label: "ctx",
                            location: 70..73,
                            is_validator_param: false,
                        },
                        location: 70..73,
                        annotation: None,
                        doc: None,
                        tipo: (),
                    },
                ],
                body: Var {
                    location: 81..85,
                    name: "True",
                },
                doc: None,
                location: 57..74,
                name: "bar",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 88,
                can_error: true,
            },
        ),
        location: 0..9,
        params: [],
    },
)
