crates/aiken-lang/src/parser/definition/snapshots/empty_record_sugar.snap
---
source: crates/aiken-lang/src/parser/definition/data_type.rs
description: "Code:\n\npub type Foo {\n}\n"
---
DataType(
    DataType {
        decorators: [],
        constructors: [
            RecordConstructor {
                decorators: [],
                location: 0..16,
                name: "Foo",
                arguments: [],
                doc: None,
                sugar: true,
            },
        ],
        doc: None,
        location: 0..16,
        name: "Foo",
        opaque: false,
        parameters: [],
        public: true,
        typed_parameters: [],
    },
)
